# guify

./: CMakeLists.txt  README.md  button.cpp  button.hpp  cfg.cpp  cfg.h  cfg.hpp  control.cpp  control.hpp  gui.cpp  gui.hpp  guialog.pro  guify.pro  helpers.hpp  icon.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindowdialog.cpp  mainwindowdialog.hpp  mainwindowosd.cpp  mainwindowosd.hpp  mainwindowpanel.cpp  mainwindowpanel.hpp  mainwindowprocess.cpp  mainwindowprocess.hpp  mainwindowusage.cpp  mainwindowusage.hpp  process.cpp  process.hpp  server.cpp  server.hpp  swarm.cpp  swarm.hpp  unused.hpp  xxdialog.pro
components/: actionbutton.hpp  autobutton.hpp  icon.hpp
tests/control/: style.qss
tests/control/01_printer/: status.sh
tests/control/02_disk/: status.sh
tests/control/autobuttons/09_detach/: detach.sh
tests/control/autobuttons/10_bad/: detach.sh
tests/control/autobuttons/98_restart/: stop.sh
tests/panel/: style.qss
