cmake_minimum_required(VERSION 3.5)
project(guialog LANGUAGES CXX)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
add_executable(guialog main.cpp cfg.cpp helpers.hpp gui.cpp swarm.cpp swarm.hpp)
target_link_libraries(guialog PRIVATE Qt${QT_VERSION_MAJOR}::Widgets pthread)

